# staircase-automate

./: CMakeLists.txt
esp32/component/staircase-automate/: CMakeLists.txt  Kconfig
include/hal/: BinaryValue.hxx  IBinaryValueReader.hxx  IBinaryValueWriter.hxx  INTP.hxx  IPersistence.hxx  IPowerManager.hxx  IRTC.hxx  ITask.hxx  ITiming.hxx  Task.hxx  Timing.hxx
include/staircase/: BasicLight.hxx  BasicMovingFactory.hxx  ClippedSquaredMovingDurationCalculator.hxx  IBasicLight.hxx  IMoving.hxx  IMovingDurationCalculator.hxx  IMovingFactory.hxx  IMovingTimeFilter.hxx  IProximitySensor.hxx  IRunnable.hxx  IStaircaseLooper.hxx  MTAMovingTimeFilter.hxx  Moving.hxx  NTPRunnable.hxx  NTPTask.hxx  PowerRunnable.hxx  PowerTask.hxx  ProximitySensor.hxx  StaircaseHandlingTask.hxx  StaircaseLooper.hxx  StaircaseRunnable.hxx  StaticMovingFactory.hxx
include/util/: StaticDequeue.hxx
src/hal/: ITask.cxx  Task.cxx
src/staircase/: BasicLight.cxx  ClippedSquaredMovingDurationCalculator.cxx  IRunnable.cxx  MTAMovingTimeFilter.cxx  Moving.cxx  NTPRunnable.cxx  NTPTask.cxx  PowerRunnable.cxx  PowerTask.cxx  ProximitySensor.cxx  StaircaseHandlingTask.cxx  StaircaseLooper.cxx  StaircaseRunnable.cxx
tests/: CMakeLists.txt
tests/include/mocks/: BasicLightMock.hxx  BinaryValueReaderMock.hxx  BinaryValueWriterMock.hxx  MovingDurationCalculatorMock.hxx  MovingFactoryMock.hxx  MovingMock.hxx  MovingTimeFilterMock.hxx  PersistenceMock.hxx  ProximitySensorMock.hxx  TimingMock.hxx
tests/src/: BasicLightTests.cxx  ClippedSquaredMovingDurationCalculatorTests.cxx  MTAMovingTimeFilterTests.cxx  MovingTests.cxx  ProximitySensorTests.cxx  StaircaseLooperTests.cxx  StaticDequeTests.cxx  StaticMovingFactoryTests.cxx
